# auto-ants

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml  todo.md
.claude/: settings.local.json
assets/entities/: entities.aseprite
assets/terrain/: terrain.aseprite
scripts/: setup-hooks.sh
src/: components.rs  main.rs  plugins.rs  resources.rs  systems.rs  ui.rs  ui_constructs.rs
src/components/: ant_marker.rs  camera.rs  cohesion_influence.rs  current_direction.rs  human_marker.rs  markers.rs  movement.rs  name.rs  physics.rs  random_walk.rs  social.rs  tile_markers.rs  ui.rs
src/components/camera/: camera_tracking.rs
src/components/movement/: center_pull_influence.rs  cohesion_influence.rs  desired_direction.rs  movement_velocity.rs  random_walk_influence.rs  relationship_influence.rs
src/components/physics/: human_physics.rs
src/components/social/: human_relationships.rs
src/components/ui/: debug_checkbox.rs  (+2 more)
src/config/: ui.rs
src/plugins/: hello_plugin.rs  ui_plugin.rs  world_plugin.rs
src/resources/: camera.rs  chunk_manager.rs  debug.rs  greet_timer.rs  movement.rs  movement_config.rs  physics.rs  rendering.rs  spatial.rs  terrain.rs  terrain_config.rs  tilemap_assets.rs  ui.rs
src/systems/: add_people.rs  camera.rs  debug.rs  greet_people.rs  ui.rs  update_people.rs  world.rs
src/ui/: capabilities.rs  debug_ui.rs  debug_ui_systems.rs  test_floating_window.rs  test_floating_window_systems.rs
src/ui_constructs/: debug_ui.rs  human_info_window.rs  test_floating_window.rs
(+51 files in other folders)
